# js-engine-emporium

./: .gitmodules  CMakeLists.txt  JS Engines for Audio Devs.pptx
basic/: CMakeLists.txt
basic/ChakraCore/: CMakeLists.txt  engine.h  main.cpp
basic/Escargot/: CMakeLists.txt  engine.h  main.cpp
basic/JUCE7/: CMakeLists.txt  main.cpp
basic/JUCE8/: CMakeLists.txt  main.cpp
basic/JavascriptCore/: CMakeLists.txt  engine.h  main.cpp
basic/duktape/: CMakeLists.txt  engine.h  main.cpp
basic/hermes/: CMakeLists.txt  engine.h  main.cpp
basic/jerryscript/: CMakeLists.txt  engine.h  main.cpp
basic/quickjs/: CMakeLists.txt  engine.h
basic/quickjs-ng/: CMakeLists.txt  engine.h  main.cpp
basic/static-hermes/: CMakeLists.txt  engine.h  main.cpp
basic/v8/: CMakeLists.txt  engine.h  main.cpp
basic/wrapped/: CMakeLists.txt
basic/wrapped/ScriptX/: CMakeLists.txt  main.cpp
basic/wrapped/choc/: CMakeLists.txt  main.cpp
basic/wrapped/dukglue/: CMakeLists.txt  main.cpp
benchmarks/: CMakeLists.txt  convoluted_ecma51.js  main.cpp
benchmarks/bytecode/: CMakeLists.txt  convoluted_addition.hbc  convoluted_addition.js  convoluted_addition.qbc  main.cpp  simple_addition.hbc  simple_addition.qbc
engines/: CMakeLists.txt  add_duktape.cmake  add_quickjs.cmake
engines/JUCE7/: juce_Javascript.cpp  juce_Javascript.h
wrappers/: CMakeLists.txt
